fix(pki): restrict every bootstrap credential file, not just some of them
PkiBootstrapMain wrote the CA key and every leaf key then chmod'd them
after the fact (the same race gimle-fafnir had), and its
bootstrap-account.yaml -- which carries the initial admin password
hash -- got no restriction at all, unlike its sibling ca.key/*.key
files. OwnCertificateRotator's own live key-rotation write had the
identical race. All four now go through OwnerOnlyFiles.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01H6uE8x62ZJ3xtXcAmS5qCc